// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<CardLoading
  extraClassNames="AssetCard"
  isLoading={false}
  testId="cf-ui-asset-card"
  title="Untitled"
>
  <div>
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        extraClassNames="AssetCard__asset"
        type="image"
      />
    </div>
  </div>
</CardLoading>
`;

exports[`renders the component in loading state 1`] = `
<CardLoading
  extraClassNames="AssetCard"
  isLoading={true}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div>
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        extraClassNames="AssetCard__asset"
        src="http://placekitten.com/200/300"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</CardLoading>
`;

exports[`renders the component with actions 1`] = `
<CardLoading
  actions={
    Array [
      Object {
        "onClick": [Function],
        "title": "delete",
      },
    ]
  }
  extraClassNames="AssetCard"
  isLoading={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div>
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        extraClassNames="AssetCard__asset"
        src="http://placekitten.com/200/300"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</CardLoading>
`;

exports[`renders the component with an additional class name 1`] = `
<CardLoading
  extraClassNames="AssetCard my-extra-class"
  isLoading={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div>
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        extraClassNames="AssetCard__asset"
        src="http://placekitten.com/200/300"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</CardLoading>
`;

exports[`renders the component with status 1`] = `
<CardLoading
  extraClassNames="AssetCard"
  isLoading={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div>
    <div
      className="AssetCard__header"
    >
      <Tag
        style={
          Object {
            "marginLeft": "auto",
          }
        }
        tagType="negative"
        testId="cf-ui-tag"
      >
        archived
      </Tag>
    </div>
    <div
      className="AssetCard__content"
    >
      <Asset
        extraClassNames="AssetCard__asset"
        src="http://placekitten.com/200/300"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</CardLoading>
`;

exports[`renders the component without actions 1`] = `
<CardLoading
  extraClassNames="AssetCard"
  isLoading={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div>
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        extraClassNames="AssetCard__asset"
        src="http://placekitten.com/200/300"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</CardLoading>
`;
